# code_samples

./: .gitignore  README.md
python/: pyproject.toml  setup.py
python/outlier_detection/: esd.py
python/outlier_detection/tests/: test_esd_components.py
python/tests/: esd_unit_tests.py  rosner_data.csv
scala/outlier_detection/: build.sbt
scala/outlier_detection/src/main/scala/outlier_detection/: Esd.scala  HelperClasses.scala  Helpers.scala
scala/outlier_detection/src/test/scala/outlier_detection/: TestEsdComponents.scala
